syntax = "proto3";
package routerprotocol.routerchain.metastore;

option go_package = "github.com/router-protocol/sdk-go/routerchain/metastore/types";

import "multichain/chain_type.proto"; 
import "metastore/meta_tx_status.proto"; 

message MetadataRequest {    
  string chainId = 1; 
  string contract = 2;
  uint64 eventNonce = 3; 
  uint64 blockHeight = 4; 
  string daapAddress = 5; 
  string feePayer = 6; 
  MetaTxStatus status = 7;
}

message MetadataRequestClaimHash {  
  string chainId = 1; 
  string contract = 2;
  uint64 eventNonce = 3; 
  uint64 blockHeight = 4; 
  string daapAddress = 5; 
  string feePayer = 6; 
}